feat: add initial markup

--- a/index.html
+++ b/index.html
@@ -7,6 +7,120 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Hello World</h1>
+    <nav class="side-bar">
+        <h1>Dashboard</h1>
+        <ul class="nav-list">
+            <li>Home</li>
+            <li>Profile</li>
+            <li>Messages</li>
+            <li>History</li>
+            <li>Tasks</li>
+            <li>Communites</li>
+        </ul>
+
+        <ul class="nav-list-extra">
+            <li>Settings</li>
+            <li>Support</li>
+            <li>Privacy</li>
+        </ul>
+    </nav>
+
+    <main>
+        <header>
+            <div class="placeholder">This is a place-holder for later items</div>
+            <div class="main-row">
+                <div class="greeting">
+                    <span>Hi, there</span>
+                    <h2>Morgan Oakley (@morgan)</h2>
+
+                    <button>New</button>
+                    <button>Upload</button>
+                    <button>Share</button>
+                </div>
+            </div>
+        </header>
+
+        <div class="main-content">
+            <div class="projects">
+                <h3>Your Projects</h3>
+                <div class="project-cards">
+                    <h5>Project Header</h5>
+                    <p>A semi-lengthy project description that describes about the project</p>
+                    <div class="card-footer">Placeholder text</div>
+                </div>
+                <div class="project-cards">
+                    <h5>Project Header</h5>
+                    <p>A semi-lengthy project description that describes about the project</p>
+                    <div class="card-footer">Placeholder text</div>
+                </div>
+                <div class="project-cards">
+                    <h5>Project Header</h5>
+                    <p>A semi-lengthy project description that describes about the project</p>
+                    <div class="card-footer">Placeholder text</div>
+                </div>
+                <div class="project-cards">
+                    <h5>Project Header</h5>
+                    <p>A semi-lengthy project description that describes about the project</p>
+                    <div class="card-footer">Placeholder text</div>
+                </div>
+                <div class="project-cards">
+                    <h5>Project Header</h5>
+                    <p>A semi-lengthy project description that describes about the project</p>
+                    <div class="card-footer">Placeholder text</div>
+                </div>
+                <div class="project-cards">
+                    <h5>Project Header</h5>
+                    <p>A semi-lengthy project description that describes about the project</p>
+                    <div class="card-footer">Placeholder text</div>
+                </div>
+            </div>
+            <div class="extras">
+                <div class="announcements">
+                    <h3>Announcements</h3>
+                    <div class="announcement-card">
+                        <ul class="announcement-list">
+                            <li>
+                                <h6>Announcement Title</h6>
+                                <p>Some description about the announcement</p>
+                            </li>
+                            <li>
+                                <h6>Announcement Title</h6>
+                                <p>Some description about the announcement</p>
+                            </li>
+                            <li>
+                                <h6>Announcement Title</h6>
+                                <p>Some description about the announcement</p>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+
+                <div class="trending">
+                    <h3>Trending</h3>
+                    <div class="trending-card">
+                        <ul class="trending-list">
+                            <li>
+                                <span class="tag">tegan</span>
+                                <p>World Peace Builder</p>
+                            </li>
+                            <li>
+                                <span class="tag">tegan</span>
+                                <p>World Peace Builder</p>
+                            </li>
+                            <li>
+                                <span class="tag">tegan</span>
+                                <p>World Peace Builder</p>
+                            </li>
+                            <li>
+                                <span class="tag">tegan</span>
+                                <p>World Peace Builder</p>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    </main>
 </body>
 </html>
