fix: add @ symbol to users in trending card

--- a/index.html
+++ b/index.html
@@ -100,19 +100,19 @@
                     <div class="trending-card">
                         <ul class="trending-list">
                             <li>
-                                <span class="tag">tegan</span>
+                                <span class="tag">@tegan</span>
                                 <p>World Peace Builder</p>
                             </li>
                             <li>
-                                <span class="tag">tegan</span>
+                                <span class="tag">@tegan</span>
                                 <p>World Peace Builder</p>
                             </li>
                             <li>
-                                <span class="tag">tegan</span>
+                                <span class="tag">@tegan</span>
                                 <p>World Peace Builder</p>
                             </li>
                             <li>
-                                <span class="tag">tegan</span>
+                                <span class="tag">@tegan</span>
                                 <p>World Peace Builder</p>
                             </li>
                         </ul>
