style: put salutation inside better tags

--- a/index.html
+++ b/index.html
@@ -30,8 +30,10 @@
             <div class="placeholder">This is a place-holder for later items</div>
             <div class="main-row">
                 <div class="greeting">
-                    <span>Hi, there</span>
-                    <h2>Morgan Oakley (@morgan)</h2>
+                    <div class="salutation">
+                        <p>Hi, there</p>
+                        <h2>Morgan Oakley (@morgan)</h2>
+                    </div>
 
                     <button>New</button>
                     <button>Upload</button>
