style: make header buttons push to the right

--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
                         <h2>Morgan Oakley (@morgan)</h2>
                     </div>
 
-                    <button>New</button>
-                    <button>Upload</button>
-                    <button>Share</button>
+                    <button class="new-btn">New</button>
+                    <button class="upload-btn">Upload</button>
+                    <button class="share-btn">Share</button>
                 </div>
             </div>
         </header>
