style: add icons to sidebar

--- a/index.html
+++ b/index.html
@@ -8,20 +8,20 @@
 </head>
 <body>
     <nav class="side-bar">
-        <h1>Dashboard</h1>
+        <h1><img class="icon" src="icons/view-dashboard.svg" height="40px"><span>Dashboard</span></h1>
         <ul class="nav-list">
-            <li>Home</li>
-            <li>Profile</li>
-            <li>Messages</li>
-            <li>History</li>
-            <li>Tasks</li>
-            <li>Communites</li>
+            <li><img class="icon" src="icons/home.svg" height="20px"><span>Home</span></li>
+            <li><img class="icon" src="icons/card-account-details-outline.svg" height="20px"><span>Profile</span></li>
+            <li><img class="icon" src="icons/message.svg" height="20px"><span>Messages</span></li>
+            <li><img class="icon" src="icons/history.svg" height="20px"><span>History</span></li>
+            <li><img class="icon" src="icons/file-multiple.svg" height="20px"><span>Tasks</span></li>
+            <li><img class="icon" src="icons/account-group.svg" height="20px"><span>Communites</span></li>
         </ul>
 
         <ul class="nav-list-extra">
-            <li>Settings</li>
-            <li>Support</li>
-            <li>Privacy</li>
+            <li><img class="icon" src="icons/cog.svg" height="20px"><span>Settings</span></li>
+            <li><img class="icon" src="icons/help-box-outline.svg" height="20px"><span>Support</span></li>
+            <li><img class="icon" src="icons/shield-lock.svg" height="20px"><span>Privacy</span></li>
         </ul>
     </nav>
 
