style: apply style to top row of header

--- a/index.html
+++ b/index.html
@@ -27,7 +27,13 @@
 
     <main>
         <header>
-            <div class="placeholder">This is a place-holder for later items</div>
+            <div class="top-row">
+                <img class="icon magnify" src="icons/magnify.svg" alt="magnify icon" height="20px">
+                <input type="text">
+                <img class="icon bell-ring" src="icons/bell-ring.svg" alt="bell ring" height="20px">
+                <div class="profile-circle"></div>
+                <span>Morgan Oakley</span>
+            </div>
             <div class="main-row">
                 <div class="greeting">
                     <div class="salutation">
