style: finish up greeting row

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
             </div>
             <div class="main-row">
                 <div class="greeting">
+                    <div class="main-profile-circle"></div>
                     <div class="salutation">
                         <p>Hi, there</p>
                         <h2>Morgan Oakley (@morgan)</h2>
