style: edit style of project cards

--- a/index.html
+++ b/index.html
@@ -54,32 +54,38 @@
                 <h3>Your Projects</h3>
                 <div class="project-cards">
                     <h5>Project Header</h5>
-                    <p>A semi-lengthy project description that describes about the project</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque impedit 
+                        perferendis rerum commodi deleniti id nulla voluptas quod laudantium.</p>
                     <div class="card-footer">Placeholder text</div>
                 </div>
                 <div class="project-cards">
                     <h5>Project Header</h5>
-                    <p>A semi-lengthy project description that describes about the project</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque impedit 
+                        perferendis rerum commodi deleniti id nulla voluptas quod laudantium.</p>
                     <div class="card-footer">Placeholder text</div>
                 </div>
                 <div class="project-cards">
                     <h5>Project Header</h5>
-                    <p>A semi-lengthy project description that describes about the project</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque impedit 
+                        perferendis rerum commodi deleniti id nulla voluptas quod laudantium.</p>
                     <div class="card-footer">Placeholder text</div>
                 </div>
                 <div class="project-cards">
                     <h5>Project Header</h5>
-                    <p>A semi-lengthy project description that describes about the project</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque impedit 
+                        perferendis rerum commodi deleniti id nulla voluptas quod laudantium.</p>
                     <div class="card-footer">Placeholder text</div>
                 </div>
                 <div class="project-cards">
                     <h5>Project Header</h5>
-                    <p>A semi-lengthy project description that describes about the project</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque impedit 
+                        perferendis rerum commodi deleniti id nulla voluptas quod laudantium.</p>
                     <div class="card-footer">Placeholder text</div>
                 </div>
                 <div class="project-cards">
                     <h5>Project Header</h5>
-                    <p>A semi-lengthy project description that describes about the project</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque impedit 
+                        perferendis rerum commodi deleniti id nulla voluptas quod laudantium.</p>
                     <div class="card-footer">Placeholder text</div>
                 </div>
             </div>
