style: add icons to project cards

--- a/index.html
+++ b/index.html
@@ -56,37 +56,61 @@
                     <h5>Project Header</h5>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque impedit 
                         perferendis rerum commodi deleniti id nulla voluptas quod laudantium.</p>
-                    <div class="card-footer">Placeholder text</div>
+                    <div class="card-footer">
+                        <img src="icons/star-plus-outline.svg" alt="star-plus-outline" height="20px">
+                        <img src="icons/eye-plus-outline.svg" alt="eye-plus-outline" height="20px">
+                        <img src="icons/source-branch.svg" alt="source-branch" height="20px">
+                    </div>
                 </div>
                 <div class="project-cards">
                     <h5>Project Header</h5>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque impedit 
                         perferendis rerum commodi deleniti id nulla voluptas quod laudantium.</p>
-                    <div class="card-footer">Placeholder text</div>
+                    <div class="card-footer">
+                        <img src="icons/star-plus-outline.svg" alt="star-plus-outline" height="20px">
+                        <img src="icons/eye-plus-outline.svg" alt="eye-plus-outline" height="20px">
+                        <img src="icons/source-branch.svg" alt="source-branch" height="20px">
+                    </div>
                 </div>
                 <div class="project-cards">
                     <h5>Project Header</h5>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque impedit 
                         perferendis rerum commodi deleniti id nulla voluptas quod laudantium.</p>
-                    <div class="card-footer">Placeholder text</div>
+                    <div class="card-footer">
+                        <img src="icons/star-plus-outline.svg" alt="star-plus-outline" height="20px">
+                        <img src="icons/eye-plus-outline.svg" alt="eye-plus-outline" height="20px">
+                        <img src="icons/source-branch.svg" alt="source-branch" height="20px">
+                    </div>
                 </div>
                 <div class="project-cards">
                     <h5>Project Header</h5>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque impedit 
                         perferendis rerum commodi deleniti id nulla voluptas quod laudantium.</p>
-                    <div class="card-footer">Placeholder text</div>
+                    <div class="card-footer">
+                        <img src="icons/star-plus-outline.svg" alt="star-plus-outline" height="20px">
+                        <img src="icons/eye-plus-outline.svg" alt="eye-plus-outline" height="20px">
+                        <img src="icons/source-branch.svg" alt="source-branch" height="20px">
+                    </div>
                 </div>
                 <div class="project-cards">
                     <h5>Project Header</h5>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque impedit 
                         perferendis rerum commodi deleniti id nulla voluptas quod laudantium.</p>
-                    <div class="card-footer">Placeholder text</div>
+                    <div class="card-footer">
+                        <img src="icons/star-plus-outline.svg" alt="star-plus-outline" height="20px">
+                        <img src="icons/eye-plus-outline.svg" alt="eye-plus-outline" height="20px">
+                        <img src="icons/source-branch.svg" alt="source-branch" height="20px">
+                    </div>
                 </div>
                 <div class="project-cards">
                     <h5>Project Header</h5>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque impedit 
                         perferendis rerum commodi deleniti id nulla voluptas quod laudantium.</p>
-                    <div class="card-footer">Placeholder text</div>
+                    <div class="card-footer">
+                        <img src="icons/star-plus-outline.svg" alt="star-plus-outline" height="20px">
+                        <img src="icons/eye-plus-outline.svg" alt="eye-plus-outline" height="20px">
+                        <img src="icons/source-branch.svg" alt="source-branch" height="20px">
+                    </div>
                 </div>
             </div>
             <div class="extras">
