style: style trending card

--- a/index.html
+++ b/index.html
@@ -139,20 +139,32 @@
                     <div class="trending-card">
                         <ul class="trending-list">
                             <li>
-                                <span class="tag">@tegan</span>
-                                <p>World Peace Builder</p>
+                                <div class="profile-circle blue"></div>
+                                <span>
+                                    <div class="tag">@tegan</div>
+                                    <p>World Peace Builder</p>
+                                </span>
                             </li>
                             <li>
-                                <span class="tag">@tegan</span>
-                                <p>World Peace Builder</p>
+                                <div class="profile-circle yellow"></div>
+                                <span>
+                                    <div class="tag">@tegan</div>
+                                    <p>World Peace Builder</p>
+                                </span>
                             </li>
                             <li>
-                                <span class="tag">@tegan</span>
-                                <p>World Peace Builder</p>
+                                <div class="profile-circle grey"></div>
+                                <span>
+                                    <div class="tag">@tegan</div>
+                                    <p>World Peace Builder</p>
+                                </span>
                             </li>
                             <li>
-                                <span class="tag">@tegan</span>
-                                <p>World Peace Builder</p>
+                                <div class="profile-circle pink"></div>
+                                <span>
+                                    <div class="tag">@tegan</div>
+                                    <p>World Peace Builder</p>
+                                </span>
                             </li>
                         </ul>
                     </div>
